Notifications and Reach fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,14 @@
 <resources>
 
     <string name="app_name">ANDealr</string>
+
+    <!-- Ubicode for Rs symbol-->
+    <string name="Rs">\u20B9</string>
+
+
     <string name="hello_world">Hello world!</string>
+
+
     <string name="action_settings">
         <item>Settings</item>
     </string>
