--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,10 @@
     <string name="hello_world">Hello world!</string>
     <!--<string name="app_version">Version 1.3.2</string>-->
     <string name="app_version">Version 1.4</string>
+
+    <!-- about us activity text -->
     <string name="crafted_text">Crafted with love!</string>
+    <string name="contact_us_text">We are keen to hear from you!\nConnect with us at shoot@andealr.com</string>
 
 
     <string name="action_settings">
